initial registration + initial jpa